--- a/problemset2_teramoto.qmd
+++ b/problemset2_teramoto.qmd
@@ -55,8 +55,8 @@ d <- read_csv("data/ps2_Fall2025_data.csv")|>
 ```{r}
 female <- readHMDweb( CNTRY = "USA", 
             item = "fltper_5x1", 
-            username = "eteramoto@wisc.edu", 
-            password = "83D-9b7tQT@#F8L", 
+            username = 
+            password = 
             fixup = TRUE )|>
   filter(Year == 2004)|>
   select(Age,
@@ -76,8 +76,8 @@ female2 <- d |>
 
 male <- readHMDweb( CNTRY = "USA", 
             item = "mltper_5x1", 
-            username = "eteramoto@wisc.edu", 
-            password = "83D-9b7tQT@#F8L", 
+            username = 
+            password = 
             fixup = TRUE )|>
   filter(Year == 2004)|>
   select(Age,Lx_m = Lx,
